--- a/DentProy/DentProy.Droid/DentProy.Droid.csproj
+++ b/DentProy/DentProy.Droid/DentProy.Droid.csproj
@@ -44,13 +44,8 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\DentProyPCL\DentProyPCL.csproj">
-      <Project>{812a0f6c-b801-4071-a177-ab9a4d235883}</Project>
-      <Name>DentProyPCL</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="MainActivity.cs" />
+    <Compile Include="OdontogramaActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -58,15 +53,30 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\layout\Odontograma.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\Main.axml" />
+    <AndroidResource Include="Resources\layout\Main.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\values\Strings.xml" />
     <AndroidResource Include="Resources\drawable-hdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-mdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\Icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\DentProyPCL\DentProyPCL.csproj">
+      <Project>{812a0f6c-b801-4071-a177-ab9a4d235883}</Project>
+      <Name>DentProyPCL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DentProy\DentProy.csproj">
+      <Project>{5c346ab2-b00e-4f4f-a4c3-431dbf2da45a}</Project>
+      <Name>DentProy</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
 </Project>
